fix gap b/w header and navbar

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ font-family:News Gothic MT, Arial, sans-serif;
   font-size:18px;
   background-color:#b8b7b7;
   padding-bottom: 15px;
+  margin: negative;
 }
 .navbar ul li {
   float:left;
